Re-compute LayerState for ancestor clipping mask layer when it changes position.

Other layers with LayerState already have such logic, this one was missed.
The problem exhibits in particular on non-composited scroll of the clipping ancestor.

Bug: 878330

TBR=chrishtr@chromium.org

(cherry picked from commit 15a3556b1ae1a399c66061e0a76628cdd05a9cec [formerly fc14c4224961fc7b2b52db1bdb088fc471919ed9])

Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I05c21d81a2493bbfa86f031212b61a5b973c768c
Reviewed-on: https://chromium-review.googlesource.com/1198566
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#588080}
Reviewed-on: https://chromium-review.googlesource.com/1204594
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#28}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 8d32cb5c0398de57bc3373dd7bb6faf2c1800f8e